<resources>
    <string name="app_name">AmazonEcommerceApp</string>
    <string name="find_discover_choose_and_buy_anything_online">Find, Discover, Choose and Buy anything online</string>
    <string name="already_have_ana_account_login">Already have an account? Login</string>
    <string name="join_now">Join Now</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="i_m_an_admin">I\'m an admin?</string>
    <string name="i_m_not_an_admin">I\'m not an admin</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
</resources>