<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/app_appLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/applogo" />

    <EditText
        android:id="@+id/login_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_appLogo"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="20dp"
        android:textColor="@color/ColorPrimary"
        android:textColorHint="@color/ColorPrimaryDark"
        android:textSize="17dp"
        android:textStyle="bold"
        tools:ignore="Autofill,SpUsage" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_phone_number_input"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/ColorPrimary"
        android:textColorHint="@color/ColorPrimaryDark"
        android:textSize="17dp"
        android:textStyle="bold"
        tools:ignore="Autofill,SpUsage" />

    <LinearLayout
        android:id="@+id/layout_text_views"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_input"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me_chkb"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:gravity="center_vertical"
            android:text="@string/remember_me"
            android:textColor="@color/ColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cdb_strokeColor="@color/ColorPrimary" />

        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/forget_password"
            android:textColor="@color/ColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_text_views"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/buttons_bg"
        android:padding="17dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        tools:ignore="SpUsage" />
    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_btn"
        android:text="@string/i_m_an_admin"
        android:layout_marginEnd="23dp"
        android:textColor="@color/ColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_btn"
        android:text="@string/i_m_not_an_admin"
        android:visibility="invisible"
        android:textColor="@color/ColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>