<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_appLogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/applogo" />

    <EditText
        android:id="@+id/register_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_appLogo"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_design"
        android:hint="@string/name"
        android:inputType="phone"
        android:padding="20dp"
        android:textColor="@color/ColorPrimary"
        android:textColorHint="@color/ColorPrimaryDark"
        android:textSize="17dp"
        android:textStyle="bold"
        tools:ignore="Autofill,SpUsage" />
    <EditText
        android:id="@+id/register_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_name_input"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/input_design"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="20dp"
        android:textColor="@color/ColorPrimary"
        android:textColorHint="@color/ColorPrimaryDark"
        android:textSize="17dp"
        android:textStyle="bold"
        tools:ignore="Autofill,SpUsage" />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_phone_number_input"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/input_design"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/ColorPrimary"
        android:textColorHint="@color/ColorPrimaryDark"
        android:textSize="17dp"
        android:textStyle="bold"
        tools:ignore="Autofill,SpUsage" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password_input"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/buttons_bg"
        android:padding="17dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18dp"
        tools:ignore="SpUsage" />

</RelativeLayout>